[gd_scene load_steps=22 format=3 uid="uid://b2clc7hked2ig"]

[ext_resource type="PackedScene" uid="uid://d12ujr0a6k86i" path="res://scenes/background.tscn" id="1_5dwc6"]
[ext_resource type="Script" path="res://scripts/shop_section.gd" id="1_xvt10"]
[ext_resource type="PackedScene" uid="uid://dpbjfyaoiisp2" path="res://scenes/water.tscn" id="3_xha0e"]
[ext_resource type="PackedScene" uid="uid://cejwqi7wgoau8" path="res://scenes/fishing_dock.tscn" id="4_6g1s7"]
[ext_resource type="PackedScene" uid="uid://bk57pfwypy8yf" path="res://scenes/pause_menu.tscn" id="4_quam8"]
[ext_resource type="PackedScene" uid="uid://dh3nm0d4givrx" path="res://scenes/sand.tscn" id="6_iegir"]
[ext_resource type="Texture2D" uid="uid://b4oypbrxur8jj" path="res://assets/shop_exterior.png" id="7_bt3rj"]
[ext_resource type="PackedScene" uid="uid://ls8f7tafteok" path="res://scenes/money.tscn" id="7_rbbsb"]
[ext_resource type="Texture2D" uid="uid://dr26eejdhkk25" path="res://assets/wyattfull.png" id="9_2ax4k"]

[sub_resource type="Animation" id="Animation_m4y3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gi5my"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"switch_scenes"
}]
}

[sub_resource type="Animation" id="Animation_rh6cb"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dck2"]
_data = {
"RESET": SubResource("Animation_m4y3n"),
"fade_in": SubResource("Animation_gi5my"),
"fade_out": SubResource("Animation_rh6cb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yrnt"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxfgt"]
size = Vector2(14, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdrsv"]
size = Vector2(14, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h28w6"]
size = Vector2(41, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goi8e"]
size = Vector2(6, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjmas"]
size = Vector2(4, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqpn3"]
size = Vector2(62, 45.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdncc"]
size = Vector2(65, 44)

[node name="shop_section" type="Node2D"]
script = ExtResource("1_xvt10")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)

[node name="Background" parent="." instance=ExtResource("1_5dwc6")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4dck2")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Money" parent="CanvasLayer" instance=ExtResource("7_rbbsb")]

[node name="Control" type="Control" parent="CanvasLayer"]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
modulate = Color(0, 0, 0, 1)
z_index = 2000
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6yrnt")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("4_quam8")]

[node name="Water" parent="." instance=ExtResource("3_xha0e")]
position = Vector2(0, 75)

[node name="FishingDock" parent="." instance=ExtResource("4_6g1s7")]
position = Vector2(-178, 42)

[node name="Node2D" type="Node2D" parent="."]

[node name="MainArea" type="Area2D" parent="Node2D"]
position = Vector2(-184, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/MainArea"]
shape = SubResource("RectangleShape2D_xxfgt")

[node name="XibiZoneArea" type="Area2D" parent="Node2D"]
position = Vector2(181, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/XibiZoneArea"]
shape = SubResource("RectangleShape2D_qdrsv")

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(180.5, 33)
shape = SubResource("RectangleShape2D_h28w6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(179, 1)
shape = SubResource("RectangleShape2D_goi8e")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(-182, -2.5)
shape = SubResource("RectangleShape2D_wjmas")

[node name="Sand" parent="." instance=ExtResource("6_iegir")]
position = Vector2(0, 41)

[node name="Shop" type="Area2D" parent="."]
z_index = -1
position = Vector2(0, -9)

[node name="Sprite2D" type="Sprite2D" parent="Shop"]
texture = ExtResource("7_bt3rj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop"]
position = Vector2(0, 9.25)
shape = SubResource("RectangleShape2D_nqpn3")

[node name="Wizard" type="Area2D" parent="."]
position = Vector2(77, 0)

[node name="Sprite2D" type="Sprite2D" parent="Wizard"]
texture = ExtResource("9_2ax4k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wizard"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_kdncc")

[connection signal="body_entered" from="Node2D/MainArea" to="." method="_on_main_area_body_entered"]
[connection signal="body_entered" from="Node2D/XibiZoneArea" to="." method="_on_xibi_zone_area_body_entered"]
[connection signal="body_entered" from="Shop" to="." method="_on_shop_body_entered"]
[connection signal="body_exited" from="Shop" to="." method="_on_shop_body_exited"]
[connection signal="body_entered" from="Wizard" to="." method="_on_wizard_body_entered"]
[connection signal="body_exited" from="Wizard" to="." method="_on_wizard_body_exited"]
